k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops-mlops
  labels:
    app.kubernetes.io/name: devsecops-mlops
    app.kubernetes.io/part-of: mlops-platform
